patch: add extra test for object notation + string interp

--- a/test/locales/en.json
+++ b/test/locales/en.json
@@ -4,5 +4,9 @@
   "greetings": {
     "morning": "Good Morning",
     "evening": "Good Evening"
+  },
+  "greetingsWithName": {
+    "morning": "Good Morning %s",
+    "evening": "Good Evening %s"
   }
 }
