--- a/test/locales/af.json
+++ b/test/locales/af.json
@@ -4,5 +4,9 @@
   "greetings": {
     "morning": "Goeie Môre",
     "evening": "Goeie Naand"
+  },
+  "greetingsWithName": {
+    "morning": "Goeie Môre %s",
+    "evening": "Goeie Naand %s"
   }
 }
